# music_editor

./: .gitignore  Cargo.toml  LICENSE  README.md
ir/: Cargo.toml
ir/examples/: basic.rs
ir/src/: lib.rs
ir_to_mei/: Cargo.toml
ir_to_mei/examples/: basic.rs
ir_to_mei/src/: lib.rs
ir_to_smufl/: Cargo.toml
ir_to_smufl/examples/: basic.rs
ir_to_smufl/src/: lib.rs
ir_to_svg/: Cargo.toml
ir_to_svg/examples/: basic.rs
ir_to_svg/src/: lib.rs
operations/: Cargo.toml
operations/examples/: basic.rs
operations/src/: lib.rs
src/: main.rs
verovio/: Cargo.toml  a.out  bindings.h  build.rs
verovio/examples/: basic.rs
verovio/src/: bindings.rs  lib.rs
