[package]
name = "music_editor"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
operations = { path = "./operations" }
verovio = { path = "./verovio" }
log = "0.4.14"
simplelog = "0.10.0"
strong-xml = "0.6.2"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
serde = "1"
serde_json = "1"
