[package]
name = "ir"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strong-xml = "0.6.2"
resvg = "0.14.0"
usvg = "0.14.0"
tiny-skia = "0.5.1"
tempfile = "3.2.0"
