[package]
name = "operations"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ir = { path = "../ir" }
log = "0.4.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
